# and_gerri_KRPC-concept

./: .gitignore  README.md  README_KR.md  command_layout_generator.py  first_setup.py  first_setup_cli.py  gyd_mobile_robot.py  gyd_operator.py  gyd_robot.py  hello_universe_config.py  hello_universe_operator.py  hello_universe_robot.py  hello_universe_robot_config.py  install.sh  keyboard_mouse_controller_map.py  kmc_hint_dialog.py  pyproject.toml  realsense_robot_test.py  requirements.txt  spot_robot.py  tom_and_gerri_full_readme.md
TestRobot/operator/: TestRobot_commander.py  TestRobot_config.py
TestRobot/robot/: TestRobot_config.py
_and_/: TODO_and_operator.py  and_robot.py
_and_/elsa/: config.py  elsa_pub.py  elsa_sub.py
gerri/: hello_universe_robot.py
gerri/robot/examples/zimmer/: pyproject.toml  zimmer_base_controller.py  zimmer_controller.py
gerri/robot/examples/zimmer/src/zimmer/: driver.py
gerri/robot/examples/zimmer/src/zimmer/cli/: __init__.py  connect.py  console_colors.py  disconnect.py  grip.py  main.py  release.py
gerri/robot/examples/zimmer/src/zimmer/daemon/: __init__.py  client.py  server.py
gerri/robot/examples/zimmer/tools/Turck Automation Suite/TAS/: ChangelogCustomer-en.html
operator/: manipulator_operator.py  mobile_command.py  requirements.txt  vr_tracker.py
robot/: README.md  manipulator_controller.py  mobile_controller.py  raas_dataset_builder.py  time_sync_manager.py
utils/: bootstrap_path.py  ex_ssd_check.py  setup_gerri_env.sh
wizard/: main.py  operator_setup.py  robot_setup.py  robot_setup_gui.py
(+346 files in other folders)
