[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "and_gerri"
version = "0.1.0"
description = "AND + GERRI unified robotics library"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]

dependencies = [
]

[tool.setuptools.packages.find]
where = ["."]

